Updated Landing Page Fixed some Alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&family=Roboto:wght@300&display=swap');
 
-body
-{
+body{
     position: relative;
     user-select: none;
     width: 100%;
-}
-h2,h3,h4,h5,h6 
-{
     font-family: 'Quicksand', sans-serif;
 }
-
-.container
-{
+.container{
     position: relative; 
     margin: auto;
     width: 80%;
-    height: 93vh;
     background-color: black;
     margin-top: 20px;
 }
-.container::before
-{
+.container::before{
     position: absolute;
     content: "";
-    background-image: url(/images/frontend.jpg);
+    background-image: url('../images/frontend.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     top: 0px;
@@ -34,22 +26,18 @@ h2,h3,h4,h5,h6
     opacity: 0.4;
     box-shadow: 0px 8px 10px 8px black;
 }
-a
-{
+a{
     position: relative;
 }
-a:hover
-{
+a:hover{
     text-decoration: none !important;
 }
-.welcome,.welcome:hover
-{
+.welcome,.welcome:hover{
     font-size: 30px;
     color:powderblue;
     cursor: pointer;
 }
-.nav
-{
+.nav{
     position: relative;
     font-size: 14px;
     font-weight: bold;
@@ -61,17 +49,15 @@ a:hover
     box-shadow: 0px 1px 5px 1px black;
 }
 
-.nav:hover
-{
+.nav:hover{
     box-shadow: 0px 1px 5px 1px white;
 }
 
-.main 
-{
+.main {
     margin-top: 50px;
 }
-h1
-{
+
+h1{
     position: relative;
     color:white;
     font-size: 35px;
@@ -81,8 +67,7 @@ h1
     -webkit-text-stroke-color: grey;
 }
 
-input
-{
+input{
     position: relative;
     text-align: center;
     display: block;
@@ -93,16 +78,13 @@ input
     border-radius: 10px;
     
 }
-input:hover
-{
+input:hover{
     box-shadow: 0px 2px 5px 2px grey;
 }
-.emaillabel
-{
+.emaillabel{
     position: relative;  
 }
-button 
-{
+button {
     position: relative;
     text-align: center;
     display: block;
@@ -114,19 +96,16 @@ button
     font-weight: bold;
     font-size:20px;
 }
-button:hover
-{
+button:hover{
     transform: translateY(4px);
 }
 
-.footer
-{
+.footer{
     position: relative;
     margin-top: 60px;
 
 }
-.icons
-{
+.icons{
     padding: 9px;
     padding-left: 15px;
     padding-right: 15px;
@@ -136,19 +115,16 @@ button:hover
     text-align: center;
     border-radius: 50%;
 }
-.icons:hover
-{
+.icons:hover{
     color: honeydew;
     box-shadow: 0px 0px 2px 5px tan;
 }
 
- [data-tooltip]
-{
+[data-tooltip]{
     position: relative;
    
 }
-[data-tooltip]:hover::after
-{
+[data-tooltip]:hover::after{
     position: absolute;
     content: attr(data-tooltip);
     color: palegreen;
@@ -158,119 +134,85 @@ button:hover
     right: 0;
 }
 
-.copyright
-{
+.copyright{
     position: relative;
-    margin-top: 50px;
-    padding: 10px;
+    padding: 50px 10px 30px 10px;
 }
-.social
-{
+.social{
     font-size: 17px;
     color:darkkhaki;
     font-weight: bold;
 }
-.link
-{
+.link{
     color:burlywood;
     font-weight: bold;
 }
-.link:hover
-{
+.link:hover{
     font-weight: bold;
     color: palegoldenrod;
 }
 
 /* Side Nav */
 
-.hamburger,.hamburger:hover
-{
+.hamburger,.hamburger:hover{
     position:absolute;
     color: black;
     background-color: bisque;
     opacity: 0.6;  
-    margin-top: -50px;
-    right: 1em;
+    margin-top: -22px;
+    right: 2em;
 }
 
-.sidenav
-{
+.sidenav{
     position:absolute;
     height: auto;
     width: auto;
     background-color: grey;
     border: 2px solid tan;
-    margin-top: -15px;
-    margin-right: 40px;
+    margin-top: -22px;
+    margin-right: 62px;
     text-align: center;
     right:0;
     z-index: 1;
     
 }
-#Sidenav
-{
+#Sidenav{
     display: none;
 }
 
-.sidenav .mobile
-{
-   
+.sidenav .mobile{
     position:relative;
     font-size: 14px;
     font-weight: bold;
     text-align: center;
     cursor: pointer;  
-    
 }
-.sidenav .mobile:hover
-{
-    box-shadow: 0px 1px 5px 1px black;
-    
+.sidenav .mobile:hover{
+    box-shadow: 0px 1px 5px 1px black;   
 }
 
-@media only screen and (max-width:760px)
-{
-    .nav
-    {
-        visibility: hidden;
+@media (max-width:768px){
+    .nav{
+        display: none;
     }
     
-    .hamburger
-    {
-        visibility: visible;
+    .hamburger,#Sidenav{
+        display: block;
     }
-}
+    h1{
+        font-size: 24px !important;
+    }
+} 
 
-@media only screen and (min-width:761px)
+@media only screen and (min-width:768px)
 {
     .nav
-    {
-        visibility: visible;
-    }
-    .hamburger,#Sidenav
-    {
-        visibility: hidden;
-    }
-}
-@media (min-width:240px) and (max-width:460px)
-{
-    input
-    {
-        width:100%;
-    }
-    .icons
-    {
-        margin-left: 0%;
-    }
-    .link
     {
         display: block;
     }
-}
-@media only screen and (orientation:portrait)
-{
-    .container
+    .hamburger,#Sidenav
     {
-        height: auto;
+        display: none;
     }
 }
+
